Ainda criando cadastro de cursos

--- a/client-components/bricks/edit-course-form.html
+++ b/client-components/bricks/edit-course-form.html
@@ -11,10 +11,13 @@
         min_points_required: 1,
         is_visible: 1,
         
+        categoriesAvailable: [],
+
         lessons_json: '[]',
         categories_ids_json: '[]',
         
         lessons: [],
+        categories_ids: [],
         deleted_lessons_ids: [],
         searchMedia: { enabled: false, pageNum: 1, dataRows: [], allCount: 0, resultsOnPage: 20, q: '' },
     };
@@ -99,6 +102,28 @@
             this.render({ ...this.state, lessons: newLessons });
         },
 
+        moveLesson(index, direction)
+        {
+            if (direction === 'up' && index > 1)
+            {
+                let moved = this.state.lessons[index - 1];
+                let replaced = this.state.lessons[index - 2];
+                this.state.lessons[index - 2] = moved;
+                this.state.lessons[index - 1] = replaced;
+            }
+            else if (direction === 'down' && index < this.state.lessons.length)
+            {
+                let moved = this.state.lessons[index - 1];
+                let replaced = this.state.lessons[index];
+                this.state.lessons[index] = moved;
+                this.state.lessons[index - 1] = replaced;
+            }
+
+            const newLessons = this.state.lessons.map( (l, newIndex) => ({ ...l, index: newIndex + 1 }) );
+
+            this.render({ ...this.state, lessons: newLessons });
+        },
+
         mutateLesson(index, field, value)
         {
             const lessons = this.state.lessons;
@@ -111,13 +136,28 @@
         submit(e)
         {
             e.preventDefault();
-            console.log(this.state);
+
+            const data = {...this.state};
+            delete data.categoriesAvailable;
+            delete data.lessons;
+            delete data.categories_ids;
+            delete data.searchMedia;
+
+            const { deleted_lessons_ids, lessons_json, categories_ids_json, ...data2 } = data;
+
+            const outputData = {};
+            for (const prop in data2)
+                outputData['courses:' + prop] = data2[prop];
+
+            Object.assign(outputData, { deleted_lessons_ids, lessons_json, categories_ids_json });
+
+            console.log(outputData);
         }
     };
 
     function setup()
     {
-        this.state.lessons = JSON.parse(this.state.lessons_json || '[]');
+        this.render({ ...this.state, lessons: JSON.parse(this.getAttribute('lessons_json') || '[]'), categoriesAvailable: JSON.parse(this.getAttribute('categories_available_json') || '[]') });
     }
 </script>
 
@@ -168,8 +208,18 @@
             :completion_points="lesson.completion_points"
             :removelessoncallback="this.removeLesson.bind(this)"
             :changefieldcallback="this.mutateLesson.bind(this)"
+            :movelessoncallback="this.moveLesson.bind(this)"
         ></edit-single-lesson>
         <button type="button" class="btn" @click="addLesson">Adicionar aula</button>
+
+        <h2>Categorias</h2>
+        <ul class="list-disc pl-4">
+            <li :for="cat in state.categoriesAvailable">
+                <label>
+                    <input type="checkbox" value="${cat.id}"> ${cat.title}
+                </label>
+            </li>
+        </ul>
         <div class="text-center mt-4">
             <button type="submit" class="btn">Salvar</button>
         </div>
