--- a/client-components/bricks/admin-logout-button.html
+++ b/client-components/bricks/admin-logout-button.html
@@ -6,12 +6,8 @@
         {
             fetch(Parlaflix.Helpers.URLGenerator.generateApiUrl('/administrator/logout'))
             .then(res => res.json())
-            .then(json => 
-            {
-                Parlaflix.Alerts.pushFromJsonResult(json);
-                if (json.success)
-                    window.location.href = Parlaflix.Helpers.URLGenerator.generatePageUrl('/admin/login');
-            })
+            .then(Parlaflix.Alerts.pushFromJsonResult)
+            .then(Parlaflix.Helpers.URLGenerator.goToPageOnSuccess('/admin/login', {}))
             .catch(reason => Parlaflix.Alerts.push(Parlaflix.Alerts.types.error, String(reason)));
         }
     };
