Bugs corrigidos, páginas de cursos criadas

--- a/client-components/bricks/edit-course-form.html
+++ b/client-components/bricks/edit-course-form.html
@@ -108,7 +108,7 @@
             const lessonsChangesReportUpdated = { ...this.state.lessonsChangesReport };
             const id = this.state.lessons.find(l => l.index == index)?.id;
             if (id)
-                lessonsChangesReportUpdated.delete.push(id);
+                lessonsChangesReportUpdated.delete.push({ id: Number(id) });
 
             const newLessons = this.state.lessons
                 .filter( l => l.index != index )
@@ -211,13 +211,9 @@
 
     function setup()
     {
-        this.render(
-            { ...this.state, 
-                lessons: JSON.parse(this.getAttribute('lessons_json') || '[]'), 
-                categoriesAvailable: JSON.parse(this.getAttribute('categories_available_json') || '[]'),
-                categoriesIds: JSON.parse(this.getAttribute('categories_ids_json') || '[]')
-            }
-        );
+        this.state.lessons = JSON.parse(this.getAttribute('lessons_json') || '[]');
+        this.state.categoriesAvailable = JSON.parse(this.getAttribute('categories_available_json') || '[]');
+        this.state.categoriesIds = JSON.parse(this.getAttribute('categories_ids_json') || '[]');
     }
 </script>
 
@@ -266,9 +262,6 @@
             :video_url="lesson.video_url"
             :completion_password="lesson.completion_password"
             :completion_points="lesson.completion_points"
-            :removelessoncallback="this.removeLesson.bind(this)"
-            :changefieldcallback="this.mutateLesson.bind(this)"
-            :movelessoncallback="this.moveLesson.bind(this)"
         ></edit-single-lesson>
         <button type="button" class="btn" @click="addLesson">Adicionar aula</button>
 
