Adicionado campo de data e hora e link de meeting ao vivo das aulas dos cursos

--- a/client-components/bricks/edit-single-lesson.html
+++ b/client-components/bricks/edit-single-lesson.html
@@ -6,10 +6,15 @@
         index: 1,
         title: '',
         presentation_html: '',
+        live_meeting_url: '',
+        live_meeting_datetime: '',
+        liveMeetingDate: '',
+        liveMeetingTime: '',
         video_host: 'youtube',
         video_url: '',
-        completion_password: Math.floor(Math.random() * 8999) + 1000,
-        completion_points: 1
+        completion_password: '',
+        completion_points: 1,
+        timezone: ''
     };
 
     const methods = 
@@ -17,6 +22,32 @@
         changeField(e)
         {
             document.querySelector('edit-course-form').mutateLesson(this.state.index, e.target.getAttribute('data-fieldname'), e.target.value);
+        },
+
+        dateFieldChanged(e)
+        {
+            const dat = e.target.value;
+            this.render({ ...this.state, liveMeetingDate: dat });
+
+            if (!isNaN(new Date(`${dat} ${this.state.liveMeetingTime}`).valueOf()))
+            {
+                document.querySelector('edit-course-form').mutateLesson(this.state.index, e.target.getAttribute('data-fieldname'), `${dat} ${this.state.liveMeetingTime}`);
+            }
+            else if (!this.state.liveMeetingTime && !this.state.liveMeetingDate)
+                document.querySelector('edit-course-form').mutateLesson(this.state.index, e.target.getAttribute('data-fieldname'), null);
+        },
+
+        timeFieldChanged(e)
+        {
+            const tim = e.target.value;
+            this.render({ ...this.state, liveMeetingTime: tim });
+
+            if (!isNaN(new Date(`${this.state.liveMeetingDate} ${tim}`).valueOf()))
+            {
+                document.querySelector('edit-course-form').mutateLesson(this.state.index, e.target.getAttribute('data-fieldname'), `${this.state.liveMeetingDate} ${tim}`);
+            }
+            else if (!this.state.liveMeetingTime && !this.state.liveMeetingDate)
+                document.querySelector('edit-course-form').mutateLesson(this.state.index, e.target.getAttribute('data-fieldname'), null);
         },
 
         pasteVideoCode(e)
@@ -48,6 +79,16 @@
             document.querySelector('edit-course-form').moveLesson(e.target.getAttribute('data-lesson-index'), 'down');
         }
     };
+
+    function setup()
+    {
+        const date = this.getAttribute('live_meeting_datetime') ? new Date(this.getAttribute('live_meeting_datetime')) : new Date();
+        const dateStr = `${date.getFullYear()}-${String(date.getMonth() + 1).padStart(2, 0)}-${String(date.getDate()).padStart(2, 0)}`;
+        const timeStr = `${String(date.getHours()).padStart(2, 0)}:${String(date.getMinutes()).padStart(2, 0)}:${String(date.getSeconds()).padStart(2, 0)}`;
+
+        this.state.liveMeetingDate = dateStr;
+        this.state.liveMeetingTime = timeStr;
+    }
 </script>
 
 <template>
@@ -58,6 +99,14 @@
         </ext-label>
         <ext-label label="Mais informações (HTML permitido)" linebreak="1">
             <textarea data-fieldname="presentation_html" class="w-full" rows="4" maxlength="1000" @input="changeField" :value="state.presentation_html"></textarea>
+        </ext-label>
+        <ext-label label="Link da sala (aula ao vivo)">
+            <input type="text" data-fieldname="live_meeting_url" class="w-full" maxlength="140" @input="changeField" :value="state.live_meeting_url" />
+        </ext-label>
+        <ext-label label="Data e hora da aula ao vivo">
+            <input type="date" data-fieldname="live_meeting_datetime" :value="state.liveMeetingDate" @change="dateFieldChanged" />
+            <input type="time" step="1" data-fieldname="live_meeting_datetime" :value="state.liveMeetingTime" @change="timeFieldChanged" />
+            (${state.timezone})
         </ext-label>
         <div class="ml-2">
             Hospedagem do vídeo: 
