--- a/db/migrations/premade_data/lgpdTerm1.html
+++ b/db/migrations/premade_data/lgpdTerm1.html
@@ -18,6 +18,7 @@ CLÁUSULA SEGUNDA
 Finalidade do Tratamento dos Dados
 O Titular autoriza que a Controladora utilize os dados pessoais listados neste termo para as seguintes finalidades:
 – Permitir que a Controladora identifique e entre em contato com o titular, em razão das atividades educacionais fornecidas pela plataforma EAD;
+- Permitir que a Controladora envie link de participação para aula ao vivo, quando for o caso;
 – Para o envio, por meio de mensagem de e-mail, do link de redefinição de senha, em caso de esquecimento desta;
 – Para fins estatísticos sobre o uso da plataforma;
 – Quando necessário para atender aos interesses legítimos do controlador, exceto no caso de prevalecerem direitos e liberdades fundamentais do titular que exijam a proteção dos dados pessoais;
