--- a/client-components/bricks/edit-course-form.html
+++ b/client-components/bricks/edit-course-form.html
@@ -95,6 +95,8 @@
                     index: this.state.lessons?.length + 1,
                     title: '',
                     presentation_html: '',
+                    live_meeting_url: '',
+                    live_meeting_datetime: '',
                     video_host: 'youtube',
                     video_url: '',
                     completion_password: '',
@@ -143,7 +145,9 @@
         {
             const lessons = this.state.lessons;
             const found = lessons.find( l => l.index == index );
-            found[field] = value;
+
+            if (found)
+                found[field] = value;
 
             this.render({ ...this.state, lessons: lessons });
         },
@@ -258,10 +262,13 @@
             :index="lesson.index"
             :title="lesson.title"
             :presentation_html="lesson.presentation_html"
+            :live_meeting_url="lesson.live_meeting_url"
+            :live_meeting_datetime="lesson.live_meeting_datetime"
             :video_host="lesson.video_host"
             :video_url="lesson.video_url"
             :completion_password="lesson.completion_password"
             :completion_points="lesson.completion_points"
+            :timezone="state.timezone"
         ></edit-single-lesson>
         <button type="button" class="btn" @click="addLesson">Adicionar aula</button>
 
