RUD de alunos no painel de adm implementado

--- a/client-components/bricks/student-register-form.html
+++ b/client-components/bricks/student-register-form.html
@@ -6,7 +6,7 @@
         email: '',
         telephone: '',
         institution: '',
-        instRole: '',
+        instrole: '',
         password: '',
         password2: '',
         timezone: 'America/Sao_Paulo',
@@ -75,7 +75,7 @@
             <input type="text" class="w-full" maxlength="140" name="institution" :value="state.institution" @input="fieldChanged"/>
         </ext-label>
         <ext-label label="Cargo">
-            <input type="text" class="w-full" maxlength="140" name="instRole" :value="state.instRole" @input="fieldChanged"/>
+            <input type="text" class="w-full" maxlength="140" name="instrole" :value="state.instrole" @input="fieldChanged"/>
         </ext-label>
         <ext-label label="Senha">
             <input type="password" required class="w-full" maxlength="140" name="password" :value="state.password" @input="fieldChanged"/>
