Bug corrigido no form de recuperação de senha de estudante

--- a/client-components/bricks/student-recover-password.html
+++ b/client-components/bricks/student-recover-password.html
@@ -48,6 +48,7 @@
                 if (this.state.newPassword !== this.state.newPassword2)
                 {
                     Parlaflix.Alerts.push(Parlaflix.Alerts.types.error, 'As senhas não coincidem!');
+                    this.render({ ...this.state, waiting: false });
                     return;
                 }
 
