Bug corrigido no form de editar cursos no painel admin

--- a/client-components/bricks/edit-course-form.html
+++ b/client-components/bricks/edit-course-form.html
@@ -165,6 +165,7 @@
             }
 
             data.categories_ids_json = JSON.stringify(data.categoriesIds);
+            data.cover_image_media_id ||= null;
 
             data.lessonsChangesReport.create = [];
             data.lessonsChangesReport.update = [];
