Implementado email de notificação para cadastro de associados

--- a/client-components/bricks/student-register-form.html
+++ b/client-components/bricks/student-register-form.html
@@ -14,7 +14,8 @@
         lgpdConsentCheck: false,
         lgpdtermversion: 0,
         lgpdTermText: '',
-        slotId: ''
+        slotId: '',
+        waiting: false
     };
 
     const methods =
@@ -41,12 +42,13 @@
 
         submit(e)
         {
-            this.render({...this.state, lgpdTermText: document.getElementById('lgpdTermForm')?.elements['lgpdTerm']?.value ?? '***'});
+            this.render({...this.state, waiting: true, lgpdTermText: document.getElementById('lgpdTermForm')?.elements['lgpdTerm']?.value ?? '***'});
             e.preventDefault();
 
             if (this.state.password !== this.state.password2)
             {
                 Parlaflix.Alerts.push(Parlaflix.Alerts.types.info, "As senhas não coincidem!");
+                this.render({ ...this.state, waiting: false });
                 return;
             }
 
@@ -60,7 +62,8 @@
             .then(res => res.json())
             .then(Parlaflix.Alerts.pushFromJsonResult)
             .then(Parlaflix.Helpers.URLGenerator.goToPageOnSuccess('/student/login'))
-            .catch(reason => Parlaflix.Alerts.push(Parlaflix.Alerts.types.error, String(reason)));
+            .catch(reason => Parlaflix.Alerts.push(Parlaflix.Alerts.types.error, String(reason)))
+            .finally(() => this.render({ ...this.state, waiting: false }));
             
         }
     };
@@ -105,7 +108,7 @@
             <input type="checkbox" required value="${state.lgpdTermVersion}" :checked="state.lgpdConsentCheck" @change="consentChecked"/>
         </ext-label>
         <div class="text-center mt-4">
-            <button class="btn" type="submit">Concluir</button>
+            <button class="btn" type="submit" :disabled="state.waiting">${state.waiting ? 'Aguarde...' : 'Concluir'}</button>
         </div>
     </form>
     <dialog id="lgpdTermDialog" class="md:w-[700px] w-screen h-screen backdrop:bg-gray-700/60 p-4 bg-neutral-100 dark:bg-neutral-800">
