Iniciada implementação das opiniões dos estudantes sobre os cursos

--- a/client-components/bricks/edit-course-form.html
+++ b/client-components/bricks/edit-course-form.html
@@ -199,7 +199,7 @@
             const route = this.state.id ? 
                 Parlaflix.Helpers.URLGenerator.generateApiUrl(`/administrator/panel/courses/${this.state.id}`) :
                 Parlaflix.Helpers.URLGenerator.generateApiUrl('/administrator/panel/courses/create');
-
+console.log(outputData);
             fetch(route, { headers, body, method: this.state.id ? 'PUT' : 'POST' } )
             .then(res => res.json())
             .then(json =>
@@ -246,7 +246,7 @@
             :set_id_field_callback="this.setMediaId.bind(this)"
         ></media-client-select>
         <ext-label label="Carga horária">
-            <input type="number" min="1" step="1" name="hours" :value="state.hours" @input="changeField" />
+            <input type="number" min="0.01" step="0.01" name="hours" :value="state.hours" @input="changeField" />
         </ext-label>
         <ext-label label="Texto para o certificado" linebreak="1">
             <textarea class="w-full" name="certificate_text" rows="4" maxlength="300" @input="changeField">${state.certificate_text}</textarea>
