--- a/client-components/bricks/media-client-select.html
+++ b/client-components/bricks/media-client-select.html
@@ -96,7 +96,7 @@
 <template>
     <div>
         <ext-label label="Subir novo(a)">
-            <input type="file" name="newMediafile" class="file:btn" @change="newMediaFileChanged"/>
+            <input type="file" name="newMediafile" class="file:cursor-pointer file:bg-violet-700 file:hover:bg-violet-800 file:active:bg-violet-900 file:px-2 file:py-1 file:text-white file:rounded-sm file:border file:border-violet-900 file:min-w-[100px] file:text-center file:dark:bg-violet-800 file:dark:hover:bg-violet-900 file:dark:active:bg-violet-950" @change="newMediaFileChanged"/>
             <button type="button" name="newMediaUpload" class="btn ml-2" @click="quickUploadMedia">Upload</button>
         </ext-label>
         <basic-search-field 
