Infinite scroll nos cursos da página inicial

--- a/client-components/bricks/five-courses-latest.html
+++ b/client-components/bricks/five-courses-latest.html
@@ -3,31 +3,65 @@
     const state =
     {
         data: [],
+        restriction: "open",
         mode: "latest",
+        pageNum: 1,
         genUrlFn: () => ""
     };
 
     const methods =
     {
-        fetchData()
+        fetchData(page = 1, replaceAll = true)
         {
-            fetch(Parlaflix.Helpers.URLGenerator.generateApiUrl(`/course/get_courses`, { mode: this.state.mode || "latest" }))
+            fetch(Parlaflix.Helpers.URLGenerator.generateApiUrl(`/course/get_courses`, 
+            { 
+                mode: this.state.mode || "latest", 
+                restriction: this.state.restriction || "open", 
+                page_num: page,
+                num_results_on_page: 5
+            }))
             .then(res => res.json())
-            .then(({ data }) => this.render({ ...this.state, data }))
-            .catch(console.error);
+            .then(replaceAll ? this.replaceAllData.bind(this) : this.appendData.bind(this))
+            .catch(console.error)
+            .finally(() => this.render({ ...this.state, pageNum: page }));
+        },
+
+        replaceAllData({ data })
+        {
+            this.render({ ...this.state, data });
+        },
+
+        appendData({ data })
+        {
+            this.render({ ...this.state, data: [ ...this.state.data, ...data ] });
         },
 
         changeMode(e)
         {
             this.render({ ...this.state, mode: e.target.value });
-            this.fetchData();
+            this.fetchData(1, true);
+        },
+
+        changeRestriction(e)
+        {
+            this.render({ ...this.state, restriction: e.target.value });
+            this.fetchData(1, true);
         }
     };
 
     function setup()
     {
-        window.addEventListener('load', _ => void (document.getElementById("radioLatestCourses").checked = true));
-        this.render({ ...this.state, mode: "latest", genUrlFn: Parlaflix.Helpers.URLGenerator.generatePageUrl });
+        window.addEventListener('load', _ => 
+        {
+            document.getElementById("radioLatestCourses").checked = true;
+            window.onscroll = evt => void 
+            (
+                window.scrollY + window.innerHeight >= document.body.offsetHeight 
+                ? this.fetchData(this.state.pageNum + 1, false)
+                : undefined
+            );
+        });
+        this.render({ ...this.state, mode: "latest", restriction: "open", genUrlFn: Parlaflix.Helpers.URLGenerator.generatePageUrl });
         this.fetchData();
     }
 </script>
@@ -35,12 +69,17 @@
 <template>
     <div style="margin-top: 20px; display: flex; flex-direction: column;" class="items-center">
         <form class="my-2">
+            <select @change="changeRestriction" :value="state.restriction" class="mr-2">
+                <option value="open">Aberto a todos</option>
+                <option value="exclusive">Exclusivos para associados</option>
+                <option value="all">Todos os cursos</option>
+            </select>
             <input type="radio" name="courseListMode" value="latest" class="hidden peer/btnLatest" id="radioLatestCourses" :checked="state.mode === 'latest'" @change="changeMode">
             <label for="radioLatestCourses" class="btn brightness-50 peer-checked/btnLatest:brightness-100">Mais recentes</label>
             <input type="radio" name="courseListMode" value="most_subscriptions" class="hidden peer/btnMostSubs" id="radioMostSubscribedCourses" :checked="state.mode === 'most_subscriptions'" @change="changeMode">
             <label class="btn ml-2 brightness-50 peer-checked/btnMostSubs:brightness-100" for="radioMostSubscribedCourses">Mais inscrições</label>
         </form>
-        <div class="flex flex-row flex-wrap">
+        <div class="flex flex-row flex-wrap justify-center">
             <a 
                 class="block overflow-clip relative p-2 mx-4 mb-4 h-[300px] min-w-[300px] max-w-[400px] rounded-sm border border-neutral-300 dark:border-neutral-700 hover:brightness-75"
                 href="${state.genUrlFn('/info/course/' + course.id)}"
